--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -72,10 +72,12 @@
     let tagCounts = [];
 
     function showGraffitiDetails(graffiti, idx) {
-        const detailsDiv = document.getElementById('graffitiDetails');
         const placeholder = document.getElementById('graffitiDetailsPlaceholder');
         placeholder.style.display = 'none';
+
+        const detailsDiv = document.getElementById('graffitiDetails');
         detailsDiv.style.display = 'block';
+
         let html = '';
         if (graffiti.photoPath) {
             html += `<img class="graffiti-photo" src="${graffiti.photoPath}" alt="Graffiti Photo" />`;
@@ -91,13 +93,14 @@
         detailsDiv.innerHTML = html;
     }
 
-    function renderTagTable() {
+    function renderStatisticTable() {
         const container = document.getElementById('tagTableContainer');
         if (!tagCounts || tagCounts.length === 0) {
             container.innerHTML = '<b>Keine Tags im Bereich gefunden.</b>';
             return;
         }
-        let html = '<table border="1" cellpadding="6" style="border-collapse:collapse;width:100%;background:#fff;">';
+        let html = `<div  class="graffiti-label">Statistik</div>`;
+        html += '<table border="1" cellpadding="6" style="border-collapse:collapse;width:100%;background:#fff;">';
         html += '<tr style="background:#eee;"><th>Tag</th><th>Anzahl</th></tr>';
         tagCounts.forEach(tc => {
             html += `<tr><td>${tc.tagValue}</td><td>${tc.count}</td></tr>`;
@@ -142,7 +145,7 @@
                         markers.push(marker);
                     }
                 });
-                renderTagTable();
+                renderStatisticTable();
             } else {
                 document.getElementById('tagTableContainer').innerHTML = '<b>Keine Graffiti gefunden!</b>';
                 alert('Keine Graffiti gefunden! data:' + JSON.stringify(data));
